--- a/test.yml
+++ b/test.yml
@@ -1,5 +1,5 @@
 ---
-- name: This is a hello-world example
+- name: This a training example
   hosts: localhost
   gather_facts: false
   vars:
@@ -15,26 +15,16 @@
     
     # this environment variable is defined but has no content
     val_empty: "{{ lookup('env','env_empty')}}"
+    # it can be defaulted if empty
     val_empty_defaulted: "{{ lookup('env','env_empty_defaulted') or ('has_been_defaulted')}}"
     
   tasks:
   
+  # Simple debug content
   - name: Check required http envionment variable 
     debug:
       msg: "Env var http={{ val_http }}"  
-  - name: Check required https envionment variable       
-    debug:
-      msg: "Env var https={{ val_https }}"  
-  - name: Check defaulted envionment variable       
-    debug:
-      msg: "Env var missing_envvar={{ val_missing_envvar }}"  
-  - name: Check empty envionment variable       
-    debug:
-      msg: "Env var val_empty={{ val_empty }}"  
-  - name: Check empty defaulted envionment variable       
-    debug:
-      msg: "Env var val_empty_defaulted={{ val_empty_defaulted }}"  
-
+  
   
   # Check required varaible with assertion
   - name: 'Check mandatory variables are defined'
@@ -72,15 +62,11 @@
       msg: "Run while val_http == on or val_http == off "  
     when: val_http == "on"  or val_http == "off" 
 
-  - name: Run while val_https == on or val_https == off 
-    debug:
-      msg: "Run while val_https == on or val_https == off "  
-    when: val_https == "on"  or val_https == "off" 
 
   #File creation
   - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
     copy: 
-      content: "hello world\n we are listening on the port {{ listening_on }} \nand that's it for \n{{ val_http }} \nand \n{{ val_https }}\nand \n{{ val_missing_envvar }}" 
+      content: "Simple file content\n on the port {{ listening_on }} \nand that's it for \n{{ val_http }} \nand \n{{ val_https }}\nand \n{{ val_missing_envvar }}" 
       dest: /tmp/test_volume/testfile.txt
   
   #Locading parameter from a file
@@ -89,6 +75,12 @@
       file: test_param.yml
       name: fromFile
   
+  # Length filter in Jinja2 to see dictionary length
+  - name: Check required http envionment variable 
+    debug:
+      msg: "Number of keys={{ fromFile.keys_content|length }}"    
+  
+  #Looping over a dictionary
   - name: Seing number of keys_content loaded from file
     debug: 
       msg: "{{ item }}"
@@ -118,7 +110,10 @@
         - fromFile.from_file_3.sub4 == "sub4_val"
 
         - fromFile.keys_content is defined
-        #- {{fromFile.keys_content|length}} == 5
+        
+        #template expression must be quoted"
+        - "{{ fromFile.keys_content|length }} == 5"
+        
         - fromFile.keys_content[0] == "key1"
         - fromFile.keys_content[1] == "key2"
         - fromFile.keys_content[2] == "key3"
